<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="5dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/app_name"
            app:titleTextColor="@color/white"
            app:menu="@menu/menu"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/gray"
        android:layoutDirection="rtl"
        android:textDirection="rtl"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/l_txt_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="10dp"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_margin="15dp"
                    android:hint="@string/link"
                    android:padding="10dp"
                    android:gravity="center"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleButton_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/l_txt_link"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:singleSelection="true">


                <com.google.android.material.button.MaterialButton
                    android:layout_weight="1"
                    android:id="@+id/r_music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/music"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_weight="1"
                    android:id="@+id/r_podcast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/podcast"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_weight="1"
                    android:id="@+id/r_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>


            </com.google.android.material.button.MaterialButtonToggleGroup>


            <Button
                android:id="@+id/download_320"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/download_320"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/toggleButton_type"
                android:layout_centerInParent="true"
                android:textSize="15sp"
                android:padding="10dp"/>

            <Button
                android:id="@+id/download_256"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/download_256"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_below="@id/download_320"
                android:layout_centerInParent="true"
                android:textSize="15sp"
                android:padding="10dp"/>

            <WebView
                android:id="@+id/webview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/download_256"
                android:layout_margin="20dp"
                android:visibility="gone"/>

            // help application
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/download_256"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h1"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h2"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h3"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_marginBottom="10dp"/>

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="500dp"
                    android:src="@drawable/h_1"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h4"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="350dp"
                    android:src="@drawable/h_2"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h5"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="350dp"
                    android:src="@drawable/h_3"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h6"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>